# sudoku

./: .gitignore
backend/: build.sbt
backend/src/main/scala/: Main.scala
backend/src/main/scala/common/sudoku/: MutableSudoku.scala  SudokuGenerator.scala  SudokuTraits.scala
backend/src/main/scala/config/: ServerConfig.scala
backend/src/main/scala/rest/: Server.scala
backend/src/main/scala/wire/: Wire.scala
deploy/: backend.dockerfile  docker-compose.yml  sudoku-gen.dockerfile
frontend/: elm.json  index.html
frontend/src/: Main.elm  Sudoku.elm
proto/: sudoku.proto
sudoku-gen/: Cargo.toml  build.rs
sudoku-gen/src/: main.rs  proto.rs  wire.rs
sudoku-gen/src/sudoku/: gen.rs  mod.rs  sudoku.rs
