[package]
name = "sudoku-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
prost = "0.11.9"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
xorshift = "0.1.3"

[build-dependencies]
tonic-build = "0.9.2"
